--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,5 +1,5 @@
  	    <div class="row-fluid">
-        <div class="span12">
+        <div>
   	        <div class="login-form">
   	            <h2><%= title %></h2>
   	            <form action="/admin/session" method="post">
