--- a/views/admin/posts/_post.ejs
+++ b/views/admin/posts/_post.ejs
@@ -1,4 +1,4 @@
-div.post(id=post.id)
+<div class="post" id="<%- post.id %>">
    a.delete(href='#) &times;
    a.edit(href='#') &#9998;
    form(action='/update', method='post')
@@ -9,3 +9,4 @@ div.post(id=post.id)
        textarea.hide(name='post[body]')= post.body
       input(type='hidden', value=post.id, name='post[id]')
       button.hide(type='submit') Save changes
+</div>
