Updated new Post form

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -10,6 +10,15 @@
       <img src="/img/animation.gif"/>
     </div>
   </div>
+  <div class="navbar">
+    <div class="navbar-inner">
+      <div class="container">
+        <ul class="nav pull-right">
+          <li><a href="/admin/post/new">Add Post</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <table class="table table-striped table-bordered table-condensed">
     <thead>
       <tr>
